# learn_OpenGLsuperbible7

./: CMakeLists.txt  README.md  playground.cpp
include/: sb7.h
shaders/: playground.frag.glsl  playground.tcs.glsl  playground.tes.glsl  playground.vert.glsl
